--- a/src/themes/builtin/minimal.css
+++ b/src/themes/builtin/minimal.css
@@ -90,8 +90,6 @@
 
 .mp-content-section pre .mp-code-header {
   margin-bottom: 8px;
-  font-size: 0;
-  line-height: 0;
 }
 
 .mp-content-section pre .mp-code-dot {
